[gd_scene load_steps=2 format=3 uid="uid://dm5epu2jyx6vk"]

[ext_resource type="Script" uid="uid://bw3p8sris0gxl" path="res://scenes/booklet/booklet.gd" id="1_kmt52"]

[node name="Booklet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kmt52")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 305
theme_override_constants/margin_top = 265
theme_override_constants/margin_right = 305
theme_override_constants/margin_bottom = 210

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 7

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PanelLeft" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaperLeft" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer/PanelLeft"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[b][i]Bandage[/i][/b]
• [b]HE[/b] for [i]Light Bleeding[/i]
• [b]LE[/b] for [i]Heavy Bleeding[/i]
	• [b]HE[/b] when used with [u]Stitches[/u]
• [b]LE[/b] when used with [u]Serum[/u] for [i]Infection[/i]
	• [b]ME[/b] when used with [u]Antibiotics[/u]
	• [b]HE[/b] when used with [u]Serum[/u] and [u]Antibiotics[/u]
• [b]LE[/b] for [i]Bullet Wound[/i]
	• [b]ME[/b] when used with [u]Tongs[/u]
	• [b]HE[/b] when used with [u]Tongs[/u] and [u]Stitches[/u]
• [b]HE[/b] when used with [u]Serum[/u] for [i]Second Degree Burns[/i]

[b][i]Serum[/i][/b]
• [b]HE[/b] for [i]First Degree Burns[/i]

[b][i]Stitches[/i][/b]
• [b]ME[/b] when used with [u]Surgery[/u] for [i]Internal Bleeding[/i]
• [b]ME[/b] for [i]Bullet Wound[/i]
	• [b]ME[/b] when used with [u]Tongs[/u]"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelRight" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaperRight" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel/HBoxContainer/MarginContainer2/PanelRight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[b][i]Antibiotics[/i][/b]
• [b]LE[/b] for [i]Infection[/i]

[b][i]Surgery[/i][/b]
• [b]ME[/b] for [i]Broken Bone[/i]
• [b]ME[/b] for [i]Necrosis[/i]
	• [b]HE[/b] when used with [u]Antibiotics[/u]
• [b]LE[/b] for [i]Shock[/i]
	• [b]WARNING![/b] High risk of [b]PATIENT DEATH[/b]

[b][i]Bone Saw[/i][/b]
• [b]GUARANTEED TO CURE ANYTHING, BUT HIGH RISK OF SHOCK OR DEATH[/b] 

[b][i]Painkiller[/i][/b]
• [b]LE[/b] for [i]Light Bleeding[/i], [i]Infection[/i], and [i]Bullet Wounds[/i], 
	• [b]ME[/b] If used again. [b]RISK OF OVERDOSE![/b]
• [b]ME[/b] for [i]Shock[/i]
	• [b]HE[/b] If used again. [b]RISK OF OVERDOSE![/b]
"

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 654

[node name="ButtonLeft" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
text = "<"

[node name="ButtonRight" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
text = ">"
clip_text = true

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.55

[node name="Clipboard" type="TextEdit" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -127.0
offset_right = 250.0
grow_vertical = 0
theme_override_font_sizes/font_size = 34
text = "CLOSE"
